@@ -15,6 +15,7 @@ Cacti CHANGELOG
 -issue#1131: Make upgrade_database.php use same version compare as /install/ system
 -issue#1133: Fix issues with variable name and debug log
 -issue#1143: ss_host_cpu.php - Division by zero / Invalid Return Value
+-issue#1146: Installation now checks URI path matchs with configuration option URL_PATH
 -issue: Updated Graph pagenation and filter reset
 
 1.1.28
